fix overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -85,6 +85,13 @@
 }
 
 @layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
   .animate-gradient-x {
     animation: gradient-x 15s ease infinite;
     background-size: 400% 400%;
